# Version 2.3

## New Features:
* When config changes are made, they now populate to every node in the cluster

## Enhancements:
* Container Layout: Container uptime is now displayed
* CSS Enhancements
* Deletes the temporary uploaded files

## Bug Fixes:
* None