@@ -138,9 +138,6 @@
 			$('#images-manage').click(function() {
 				$('#iframe_a').attr('src', '/images-manage.html');
 			});
-			$('#config-reload').click(function() {
-				$('#iframe_a').attr('src', '/config-reload.html');
-			});
 			$('#killvip').click(function() {
 				$('#iframe_a').attr('src', '/killvip.html');
 			});
@@ -248,7 +245,6 @@
 						<li><a href="#" id="node-add">Add Node</a></li>
 						<li><a href="#" id="node-remove">Remove Node</a></li>
 						<li><a href="#" id="config-edit">Edit Config</a></li>
-						<li><a href="#" id="config-reload">Reload Config</a></li>
 					</ul>
 				</li>
 				<li id="nav_containers"><a onmouseover="this.click()" href="#!">Containers</a>
